--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "flexforge",
+  "version": "0.0.2",
+  "description": "Awesome Workout Generator",
+  "scripts": {
+    "dev": "parcel src/index.html"
+  },
   "dependencies": {
     "gsap": "^3.13.0"
+  },
+  "devDependencies": {
+    "@parcel/packager-raw-url": "^2.16.1",
+    "@parcel/transformer-webmanifest": "^2.16.1",
+    "parcel": "^2.16.1"
   }
 }
