--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore .vscode directory
 .vscode/
 
+# exercise json
+exercises.json
+
 # https://github.com/github/gitignore/blob/main/Python.gitignore 
 # Byte-compiled / optimized / DLL files
 __pycache__/
